<resources>
    <string name="app_name">RicksAnimationApi</string>
    <string name="character_name">Character Name</string>
    <string name="status">Status</string>
    <string name="dead_or_alive" />
    <string name="last_known_location">Last known location:</string>
    <string name="earth_replacement_dimension">Earth (Replacement Dimension)</string>
    <string name="iv_character">ImageView Character</string>
    <string name="characters">Characters</string>

    <string name="iv_character_detail">ImageView Character Detail</string>
    <string name="species">Species</string>
    <string name="type">Type</string>
    <string name="humanoid">Humanoid</string>
    <string name="rick_s_toxic_side">Rick\'s Toxic Side</string>
    <string name="load_characters">Load Characters</string>
    <string name="download_all_data">Download all Data</string>
    <string name="bt_welcome_amani">Button Welcome Amani</string>
    <string name="bt_welcome_rick">Button Welcome Rick</string>
    <string name="iv_welcome_rick">ImageView Welcome Rick</string>
    <string name="iv_welcome_amani">ImageView Welcome Amani</string>
    <string name="rick_database_check_header">Rick Database Check Header</string>
    <string name="database_status">Database Status</string>
    <string name="character_database">Character Database</string>
    <string name="fab" />
    <string name="welcome_2">Welcome 2</string>
    <string name="color_mode">Color Mode</string>
    <string name="animation_mode">Animation Mode</string>
    <string name="_826">826</string>
    <string name="episode_db">Episode Database</string>
    <string name="locations">Locations</string>
    <string name="episodes">Episodes</string>
    <string name="api">API</string>
    <string name="db">Db</string>
    <string name="download_locations">Download Locations</string>
    <string name="download">Download</string>
    <string name="anim_color_mode">Anim Color Mode</string>
</resources>