<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_rick_db_header_outside"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:background="@drawable/anim_round_very_slow_prime"
        app:layout_constraintBottom_toTopOf="@+id/mc_rick_db_check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_rick_db_header_anim_off"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:alpha="0"
            android:background="@drawable/gradient_prime_7"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mc_rick_db_header"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:backgroundTint="@color/rick"
            app:cardCornerRadius="@dimen/margin_small"
            app:cardElevation="@dimen/margin_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_rick_db_header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/anim_round_fast_prime"
                android:contentDescription="@string/rick_database_check_header">

                <ImageView
                    android:id="@+id/iv_rick_db_header"
                    android:layout_width="wrap_content"
                    android:layout_height="88dp"
                    android:layout_margin="@dimen/margin_medium"
                    android:contentDescription="@string/rick_database_check_header"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/rick_and_morty" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mc_rick_db_check"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/zero"
        android:layout_margin="@dimen/margin_medium"
        android:backgroundTint="@color/secondary"
        app:cardCornerRadius="@dimen/margin_small"
        app:cardElevation="@dimen/margin_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_rick_db_header_outside">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_rick_db_check"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/anim_round_fast_prime">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_rick_db_anim_off"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0"
                android:background="@drawable/gradient_prime_7"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="@dimen/zero"
                android:layout_height="@dimen/zero"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_database_status"
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium"
                    android:padding="@dimen/margin_medium"
                    android:shadowColor="@color/green"
                    android:shadowRadius="@integer/text_shadow"
                    android:text="@string/database_status"
                    android:textAlignment="center"
                    android:textColor="@color/secondary"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    android:background="@drawable/card_border_no_bg_prime"
                    android:fontFamily="@font/atma_bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_character_db"
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium"
                    android:padding="@dimen/margin_medium"
                    android:shadowColor="@color/primary"
                    android:shadowRadius="3"
                    android:text="@string/character_database"
                    android:textAlignment="center"
                    android:textColor="@color/secondary"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_database_status" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>